<resources>
    <string name="app_name">StarTV</string>
    <string name="drawer_about">Meterial风格音悦台</string>
    <string name="drawer_nickname">音悦台</string>
    <string name="menu_home">首页</string>
    <string name="menu_navigation">导航</string>
    <string name="menu_v">V榜</string>
    <string name="menu_sub">订阅</string>
    <string name="menu_my">我的</string>
    <string name="title_search_hint">请输入艺人、MV或悦单名称</string>
    <string name="search_hint">请输入艺人、MV或悦单名称</string>
    <string name="menu_search">搜索</string>
    <string name="banner_sprit">/</string>
    <string name="text_max">18</string>
    <string name="play_count">播放次数:</string>
    <string name="def_danmu_text_color">#ffffff</string>
    <string name="edit_hint_send_danmu">发个弹幕呗</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="yuedan_list">悦单列表</string>
    <string name="similar_artist">相似歌手</string>
    <string name="similar_play_list">相似歌单</string>
    <string name="artist_info_mv">MV</string>
    <string name="artist_info">艺人资料</string>
    <string name="count_mv">首MV</string>
    <string name="person_sub">个人订阅</string>
    <string name="artist_name">姓名</string>
    <string name="alias_name">别名</string>
    <string name="birthday">生日</string>
    <string name="birthday_place">出生地</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="constellation">星座</string>
    <string name="BloodType">血型</string>
    <string name="nation">民族</string>
    <string name="nationality">国籍</string>
    <string name="hometown">家乡</string>
    <string name="debut_time">出道时间</string>
    <string name="brokerage_firm">经纪公司</string>
    <string name="area">地区</string>
    <string name="load_data_error">数据获取失败，点击重试</string>
    <string name="artist_other_video">同艺人其他MV</string>
    <string name="relate_play_list">收入这首MV的悦单</string>
    <string name="downloading_fragment_title">下载中</string>
    <string name="downloaded_fragment_title">已下载</string>
    <string name="most_people_play">大部分人看了</string>
    <string name="video_play_list">悦单列表</string>
    <string name="url">component/list.json</string>
    <string name="all">ALL</string>
</resources>
